# json-sim

./: CMakeLists.txt  README.md
apps/main/: README.md  main.cpp  model.json
docs/: LIBRARY.MD
headers/: basic-callback.h  simulator_t.h  workers-queue.h
opt/: CMakeLists.txt
